fix thumbnail cropping issue

--- a/app/assets/stylesheets/modules/_room.scss
+++ b/app/assets/stylesheets/modules/_room.scss
@@ -93,6 +93,9 @@ $roomDescriptionColor: #bbb;
         padding:0;
         margin-left: 4px;
         margin-right: 4px;
+        img {
+          width: 50px; height: 50px;
+        }
       }
     }
   }
